--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "flying-high-app",
   "version": "0.1.0",
   "scripts": {
-    "postinstall": "npm install --prefix web && npm install --prefix server"
+    "postinstall": "npm install --prefix web && cp -Rf web/dist/web server && npm install --prefix server"
+  },
+  "dependencies": {
+    "@angular-devkit/build-angular": "^0.1102.8",
+    "@angular/cli": "^11.2.8",
+    "@angular/compiler-cli": "^11.2.9",
+    "typescript": "^4.2.4"
   }
 }
