--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   },
   "dependencies": {
     "@angular-devkit/build-angular": "^0.1102.8",
-    "@angular/cli": "^11.2.8",
     "@angular/compiler-cli": "^11.2.9",
     "typescript": "^4.2.4"
+  },
+  "devDependencies": {
+    "@angular/cli": "^11.2.8"
   }
 }
