--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@angular-devkit/build-angular": "^0.1102.8",
+    "@angular/compiler": "^11.2.9",
     "@angular/compiler-cli": "^11.2.9",
     "typescript": "^4.2.4"
   },
