--- a/package.json
+++ b/package.json
@@ -2,12 +2,18 @@
   "name": "flying-high-app",
   "version": "0.1.0",
   "scripts": {
-    "postinstall": "npm install --prefix web && cp -Rf web/dist/web server && npm install --prefix server"
+    "postinstall": "npm install --prefix web && cp -Rf ./web/dist/web server && npm install --prefix server"
   },
   "dependencies": {
     "@angular-devkit/build-angular": "^0.1102.8",
+    "@angular/common": "^11.2.9",
     "@angular/compiler": "^11.2.9",
     "@angular/compiler-cli": "^11.2.9",
+    "@angular/core": "^11.2.9",
+    "@angular/platform-browser": "^11.2.9",
+    "@nestjs/mapped-types": "^0.4.1",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "typescript": "^4.2.4"
   },
   "devDependencies": {
