--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "flying-high-app",
   "version": "0.1.0",
   "scripts": {
-    "postinstall": "npm install --prefix web && cp -Rf ./web/dist/web server && npm install --prefix server"
+    "postinstall": "npm install --prefix server"
   },
   "dependencies": {
     "@angular-devkit/build-angular": "^0.1102.8",
