Added npm start script

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "flying-high-app",
   "version": "0.1.0",
   "scripts": {
+    "start": "npm start --prefix server",
     "postinstall": "npm install --prefix server"
   },
   "dependencies": {
