--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^4.2.4"
   },
   "devDependencies": {
-    "@angular/cli": "^11.2.8"
+    "@angular/cli": "^11.2.8",
+    "cypress": "^7.1.0"
   }
 }
