--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
     "start": "npm start --prefix server",
     "postinstall": "npm install --prefix server",
     "start-server": "npm start --prefix server &",
-    "pretest": "npm run start-server",
-    "test": "npx cypress run",
-    "posttest":"pkill -f npm"
+    "pretest": "npm run start-server",    "test": "npx cypress run",
+    "posttest":"pkill -f npm; exit 0"
   },
   "dependencies": {
     "@angular-devkit/build-angular": "^0.1102.8",
