Don't run pkill on github

--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "start": "npm start --prefix server",
     "postinstall": "npm install --prefix server",
     "start-server": "npm start --prefix server &",
-    "pretest": "npm run start-server",    "test": "npx cypress run",
-    "posttest":"pkill -f npm; exit 0"
+    "pretest": "npm run start-server",    
+    "test": "npx cypress run",
+    "check-env": "node -e 'console.log(process.env)' | grep npm",
+    "posttest":"$npm_config_github || pkill -f npm"
   },
   "dependencies": {
     "@angular-devkit/build-angular": "^0.1102.8",
